Refactoring to Express

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,9 +5,9 @@
             "name": "Launch",
             "type": "node",
             "request": "launch",
-            "program": "${workspaceRoot}/node_modules/actionhero/bin/actionhero",
+            "program": "${workspaceRoot}/node_modules/babel-cli/lib/babel-node.js",
             "stopOnEntry": false,
-            "args": ["start"],
+            "args": ["${workspaceRoot}/src/index.js"],
             "cwd": "${workspaceRoot}",
             "preLaunchTask": null,
             "runtimeExecutable": null,
