--- a/package.json
+++ b/package.json
@@ -53,9 +53,11 @@
     "supertest": "^1.2.0"
   },
   "dependencies": {
+    "apicache": "0.0.14",
     "babel-polyfill": "^6.7.4",
     "babel-runtime": "^6.6.1",
     "bluebird": "^3.3.5",
+    "compression": "^1.6.2",
     "core-js": "^2.2.2",
     "datadog-metrics": "^0.3.0",
     "debug": "^2.2.0",
