--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "core-js": "^2.2.2",
     "datadog-metrics": "^0.3.0",
     "debug": "^2.2.0",
+    "ejs": "^2.4.2",
     "express": "4.13.4",
     "express-less": "0.0.8",
     "lodash": "^4.12.0",
