Trying to get circleci to work

--- a/circle.yml
+++ b/circle.yml
@@ -5,7 +5,7 @@ machine:
     - docker
 dependencies:
   override:
-    - ./scripts/deps
+    - npm install
 test:
   override:
     - ./scripts/build
