--- a/circle.yml
+++ b/circle.yml
@@ -11,4 +11,4 @@ deployment:
     branch: master
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-      - docker push circleci/elasticsearch
+      - docker push inumedia/maplestory.io
