Removing compiled scripts

--- a/circle.yml
+++ b/circle.yml
@@ -6,9 +6,10 @@ machine:
 dependencies:
   override:
     - npm install
+    - apt-get install git
 deployment:
   hub:
     branch: master
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-      - docker push inumedia/maplestory.io
+      - docker push inumedia/maplestory.io:master
