--- a/circle.yml
+++ b/circle.yml
@@ -6,10 +6,12 @@ machine:
 dependencies:
   override:
     - npm install
-    - apt-get install git
+    - docker info
+    - docker build -t inumedia/maplestory.io .
 deployment:
   hub:
     branch: master
     commands:
+      - npm run compile
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-      - docker push inumedia/maplestory.io:master
+      - docker push inumedia/maplestory.io
