--- a/teleport.conf
+++ b/teleport.conf
@@ -6,5 +6,5 @@ description "An simple service to manage lots of servers."
 start on runlevel [2345]
 respawn
 script
-exec teleport start
+exec teleport start --nodename=$DOCKERCLOUD_SERVICE_FQDN --auth-server=$TELEPORT_AUTH_SERVER_IP --token=$TELEPORT_AUTH_TOKEN
 end script
