--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "ejs": "^2.4.2",
     "express": "4.13.4",
     "express-less": "0.0.8",
+    "express-redis-cache": "^0.4.2",
     "lodash": "^4.12.0",
     "progress": "^1.1.8",
     "raven": "^0.10.0",
