--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "babel-polyfill": "^6.7.4",
     "babel-runtime": "^6.6.1",
     "bluebird": "^3.3.5",
+    "cache-manager": "^2.1.2",
+    "cache-manager-redis": "^0.2.4",
     "cheerio": "^0.20.0",
     "compression": "^1.6.2",
     "core-js": "^2.2.2",
