Properly retrying to get avatars, default avatar, properly returning out of the routes when an error occurs

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
             "request": "launch",
             "program": "${workspaceRoot}/node_modules/babel-cli/lib/babel-node.js",
             "stopOnEntry": false,
-            "args": ["${workspaceRoot}/src/index.js"],
+            "args": ["${workspaceRoot}/src/index.js", "--source-maps"],
             "cwd": "${workspaceRoot}",
             "preLaunchTask": null,
             "runtimeExecutable": null,
