--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
 {
   "presets": ["es2015", "stage-1"],
   "plugins": ["transform-runtime"],
-  "sourceMaps": "inline"
+  "sourceMaps": "both",
+  "retainLines": true
 }
