--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "request-promise": "^4.1.1",
     "rethinkdb": "^2.3.1",
     "socket.io": "1.4.6",
-    "source-map-support": "^0.4.0"
+    "source-map-support": "^0.4.0",
+    "npm install html-entities":"1.2.0"
   }
 }
